Update config-wb-domofon-mb.json (#735)
* Update config-wb-domofon-mb.json

Исправил опечатку в переводах

* Update changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.130.1) stable; urgency=medium
+
+  * Fix a type in WB-Domofon template
+
+ -- Roman Matveev <roman.matveev@wirenboard.ru>  Fri, 10 Jul 2024 14:47:30 +0300
+
 wb-mqtt-serial (2.130.0) stable; urgency=medium
 
   * Add Energomera CE102 template
