--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
+wb-mqtt-serial (2.131.0) stable; urgency=medium
+
+  * Add template APC NMC2 AP9630
+
+ -- Roman Matveev <roman.matveev@wirenboard.ru>  Wed, 10 Jul 2024 16:42:30 +0300
+
 wb-mqtt-serial (2.130.1) stable; urgency=medium
 
   * Fix a type in WB-Domofon template
 
- -- Roman Matveev <roman.matveev@wirenboard.ru>  Fri, 10 Jul 2024 14:47:30 +0300
+ -- Roman Matveev <roman.matveev@wirenboard.ru>  Wed, 10 Jul 2024 14:47:30 +0300
 
 wb-mqtt-serial (2.130.0) stable; urgency=medium
 
