--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.131.0) stable; urgency=medium
+
+  * Add new template for Carel muRack after rework
+
+ -- Andrey Ksenofontov <andrey.ksenofontov@wirenboard.com>  Thu, 11 Jul 2024 15:36:30 +0300
+
 wb-mqtt-serial (2.130.2) stable; urgency=medium
 
   * Add indirect control channels for WB-MSW-v3/v4/v4-lora and WB-MIR-v2
