--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.132.0) stable; urgency=medium
+
+  * WB-MRWM2 template: add support for startup delay, restart delay, voltage control function
+
+ -- Ilia Skochilov <ilia.skochilov@wirenboard.com>  Fri, 12 Jul 2024 11:18:15 +0300
+
 wb-mqtt-serial (2.131.0) stable; urgency=medium
 
   * Add new template for Carel muRack after rework
