--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.132.1) stable; urgency=medium
+
+  * Add min core voltage reg in m1w2 template
+
+ -- Radmir Khakimov <radmir.khakimov@wirenboard.com>  Tue, 15 Jul 2024 15:31:30 +0500
+
 wb-mqtt-serial (2.132.0) stable; urgency=medium
 
   * Somfy SDN: add tilting support
