--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wb-mqtt-serial (2.133.0) stable; urgency=medium
+
+  * Add IEC61107 Mode C protocol
+  * Add LUNA three-phase electricity meter template
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Tue, 16 Jul 2024 10:09:00 +0500
+
 wb-mqtt-serial (2.132.1) stable; urgency=medium
 
   * Add min core voltage reg in m1w2 template
