--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+wb-mqtt-serial (2.133.1) stable; urgency=medium
+
+  * Add min core voltage reg in wb-mir_v2 template
+  * Add min core voltage reg in wb-mai2-cc template
+  * Add min core voltage reg in wb-mr2m template
+
+ -- Sergey Mishin <mishin@wirenboard.com>  Tue, 16 Jul 2024 13:35:00 +0300
+
 wb-mqtt-serial (2.133.0) stable; urgency=medium
 
   * Add IEC61107 Mode C protocol
