--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.133.4) stable; urgency=medium
+
+  * ONOKOM templates: fix units
+
+ -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Mon, 22 Jul 2024 16:05:00 +0400
+
 wb-mqtt-serial (2.133.3) stable; urgency=medium
 
   * WB-MRM2-MINI template: add min request interval
