--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.133.5) stable; urgency=medium
+
+  * Add g-leakage group
+
+ -- Mikhail Burchu <mikhail.burchu@wirenboard.com>  Thu, 25 Jul 2024 10:35:00 +0300
+
 wb-mqtt-serial (2.133.4) stable; urgency=medium
 
   * ONOKOM templates: fix units
