Feature/int-104 add template kaplestop (#795)
* add kaplestop template file

* Update TDeviceTemplatesTest.Validate.dat

add KapleStop channels

* Update changelog

add template for kaplestop

* add kaplestop jinja template file

* Delete templates/wb-serial-kaplestop.json

* add kaplestop jinja template file

* Delete templates/wb-serial-kaplestop.json.jinja

* Update TDeviceTemplatesTest.Validate.dat

add KapleStop channels

* Update TDeviceTemplatesTest.Validate.dat

add KapleStop channel

* Update TDeviceTemplatesTest.Validate.dat

add kaplestop channel

* Update TDeviceTemplatesTest.Validate.dat

add kaplestop channel

* Update TDeviceTemplatesTest.Validate.dat

add kaplestop channel

* Update debian/changelog

Co-authored-by: KraPete <86825564+KraPete@users.noreply.github.com>

* Update config-kaplestop.json.jinja

remove default variable definition

* Update config-kaplestop.json.jinja

add missing translation

* Update config-kaplestop.json.jinja

correct parameter name

* Update config-kaplestop.json.jinja

fix incorrect parameter translation

* Update config-kaplestop.json.jinja

fix typo

* Update config-kaplestop.json.jinja

remove extra line

---------

Co-authored-by: KraPete <86825564+KraPete@users.noreply.github.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.134.0) stable; urgency=medium
+
+  * Add template for kaplestop
+
+ -- Mikhail Burchu <mikhail.burchu@wirenboard.com>  Thu, 25 Jul 2024 15:45:00 +0300
+
 wb-mqtt-serial (2.133.5) stable; urgency=medium
 
   * Add g-leakage group
