Feature/add template apc (#782)
* Add files via upload

* Update TDeviceTemplatesTest.Validate.dat

* Update groups.json

* Update changelog

* Update config-apc-nmc2.json

* Update TDeviceTemplatesTest.Validate.dat

* Update TDeviceTemplatesTest.Validate.dat

* Update templates/config-apc-nmc2.json

Co-authored-by: Nikolay Korotkiy <sikmir@disroot.org>

* Update config-apc-nmc2.json

* Update TDeviceTemplatesTest.Validate.dat

* Update config-apc-nmc2.json

* Update TDeviceTemplatesTest.Validate.dat

* Update TDeviceTemplatesTest.Validate.dat

* Update config-apc-nmc2.json

---------

Co-authored-by: Nikolay Korotkiy <sikmir@disroot.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.136.0) stable; urgency=medium
+
+  * Add template APC NMC2 AP9630
+
+ -- Roman Matveev <roman.matveev@wirenboard.ru>  Wed, 31 Jul 2024 11:06:30 +0300
+
 wb-mqtt-serial (2.135.0) stable; urgency=medium
 
   * WB-MRWM2 template: add support for startup delay, restart delay, voltage control function
@@ -79,7 +85,7 @@ wb-mqtt-serial (2.130.2) stable; urgency=medium
 
   * Fix a type in WB-Domofon template
 
- -- Roman Matveev <roman.matveev@wirenboard.ru>  Fri, 10 Jul 2024 14:47:30 +0300
+ -- Roman Matveev <roman.matveev@wirenboard.ru>  Wed, 10 Jul 2024 14:47:30 +0300
 
 wb-mqtt-serial (2.130.0) stable; urgency=medium
 
