--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.137.0) stable; urgency=medium
+  
+  * Add new template for Veda VF 51
+
+ -- Roman Matveev <roman.matveev@wirenboard.ru>  Wed, 31 Jul 2024 11:39:00 +0300
+
 wb-mqtt-serial (2.136.0) stable; urgency=medium
 
   * Add template APC NMC2 AP9630
