--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.138.0) stable; urgency=medium
+
+  * Add template PID-controller Ptex
+
+ -- Roman Matveev <roman.matveev@wirenboard.ru>  Wed, 31 Jul 2024 16:34:30 +0300
+
 wb-mqtt-serial (2.137.0) stable; urgency=medium
   
   * Add new template for Veda VF 51
