--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.138.1) stable; urgency=medium
+
+  * Fix APC NMC2 AP9630 template
+
+ -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Tue, 06 Aug 2024 16:05:00 +0400
+
 wb-mqtt-serial (2.138.0) stable; urgency=medium
 
   * Add template PID-controller Ptex
