--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.138.2) stable; urgency=medium
+
+  * Add comments for Cleaning Mode in WB-MWAC template
+
+ -- Radmir Khakimov <radmir.khakimov@wirenboard.com>  Tue, 15 Aug 2024 16:05:00 +0500
+
 wb-mqtt-serial (2.138.1) stable; urgency=medium
 
   * Fix APC NMC2 AP9630 template
