--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.138.1-wb100) stable; urgency=medium
+
+  * Revert WB-MDM3 template changed in 2.125.0
+
+ -- Pavel Gasheev <pavel.gasheev@wirenboard.ru>  Tue, 20 Aug 2024 15:33:52 +0300
+
 wb-mqtt-serial (2.138.1) stable; urgency=medium
 
   * Fix APC NMC2 AP9630 template
@@ -176,6 +182,12 @@ wb-mqtt-serial (2.125.1) stable; urgency=medium
   * Fix WB-MAI6 configuration interface
 
  -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Mon, 10 Jun 2024 17:18:03 +0500
+
+wb-mqtt-serial (2.125.0) stable; urgency=medium
+
+  * WB-MDM3 template: add light scenes, switch mode, safety and powerup actions support
+
+ -- Ilia Skochilov <ilia.skochilov@wirenboard.com>  Tue, 04 Jun 2024 11:14:15 +0300
 
 wb-mqtt-serial (2.124.0) stable; urgency=medium
 
