Revert "WB-MDM3: add light scenes, switch mode, safety and powerup actions support (#751) (#801)
This reverts commit 1fcdb35b5b85b6266db0ffdf7a5eacd580957d24.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.138.1-wb100) stable; urgency=medium
+
+  * Revert WB-MDM3 template changed in 2.125.0
+
+ -- Pavel Gasheev <pavel.gasheev@wirenboard.ru>  Tue, 20 Aug 2024 15:33:52 +0300
+
 wb-mqtt-serial (2.138.1) stable; urgency=medium
 
   * Fix APC NMC2 AP9630 template
