--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.138.3) stable; urgency=medium
+
+  * Deleted light scenes from WB-MDM3
+
+ -- Sergey Mishin <mishin@wirenboard.com>  Tue, 20 Aug 2024 16:07:00 +0300
+
 wb-mqtt-serial (2.138.2) stable; urgency=medium
 
   * Add comments for Cleaning Mode in WB-MWAC template
