Feature/int 140 add template ensystec (#804)
* add template file for ensystec

* add channels for ensystec in TDeviceTemplatesTest.Validate.dat

Update TDeviceTemplatesTest.Validate.dat

* add template file for ensystec

Update config-ensystec.json.jinja

* Update changelog

* Update changelog

* add channels for ensystec in TDeviceTemplatesTest.Validate.dat 

Update TDeviceTemplatesTest.Validate.dat

* del "required": false

Update config-ensystec.json.jinja

* del comment

Update config-ensystec.json.jinja

* del block of text variables

Update config-ensystec.json.jinja

* update wb-mqtt-serial to 2.139.0

Update changelog

* del unused parameters

Update config-ensystec.json.jinja

* del unused parameters

Update config-ensystec.json.jinja

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.139.0) stable; urgency=medium
+
+  * Add template for Ensystec
+
+ -- Mikhail Burchu <mikhail.burchu@wirenboard.com>  Fri, 23 Aug 2024 08:28:00 +0300
+
 wb-mqtt-serial (2.138.2) stable; urgency=medium
 
   * Add comments for Cleaning Mode in WB-MWAC template
