--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.139.1) stable; urgency=medium
+
+  * Fix address validation for setup/parameters
+
+ -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Tue, 13 Aug 2024 10:05:00 +0400
+
 wb-mqtt-serial (2.139.0) stable; urgency=medium
 
   * Add template for Ensystec
