--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.140.0) stable; urgency=medium
+
+  * Add Modbus protocol support to port/Load RPC
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Tue, 27 Aug 2024 12:41:44 +0500
+
 wb-mqtt-serial (2.139.1) stable; urgency=medium
 
   * Fix address validation for setup/parameters
