--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.139.2) stable; urgency=medium
+
+  * Exit from application on Modbus errors
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Wed, 28 Aug 2024 09:42:17 +0500
+
 wb-mqtt-serial (2.139.1) stable; urgency=medium
 
   * Fix address validation for setup/parameters
