Add WB-MAO4-20mA support (#796)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.140.0) stable; urgency=medium
+
+  * Add WB-MAO4-20mA support
+
+ -- Pavel Gasheev <pavel.gasheev@wirenboard.ru>  Mon, 09 Sep 2024 15:41:08 +0300
+
 wb-mqtt-serial (2.139.3) stable; urgency=medium
 
   * Fix RGB Strip Hue not changed in WB-LED
