--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.140.1) stable; urgency=medium
+
+  * Add WB-MDALI support
+
+ -- Radmir Khakimov <radmir.khakimov@wirenboard.ru>  Thu, 12 Sep 2024 16:41:08 +0500
+
 wb-mqtt-serial (2.140.0) stable; urgency=medium
 
   * Add WB-MAO4-20mA support
