add new template T13-VFD-v2 (#812)
* add new version template file t13-750w-12-

* Add T13-VFD-v2 support

* Update changelog

* Update changelog for T13-VFD-v2

* Update templates/config-t13-frequency-v2.json

Удалить пустой блок с параметрами

Co-authored-by: Nikolay Korotkiy <sikmir@disroot.org>

* Update templates/config-t13-frequency-v2.json

Добавление единиц измерения в units

Co-authored-by: Nikolay Korotkiy <sikmir@disroot.org>

* Update templates/config-t13-frequency-v2.json

Добавление единиц измерения в units

Co-authored-by: Nikolay Korotkiy <sikmir@disroot.org>

* Update templates/config-t13-frequency-v2.json

Добавление единиц измерения в units

Co-authored-by: Nikolay Korotkiy <sikmir@disroot.org>

* Update config-t13-frequency-v2.json

Добавление единицы измерения в units

* Update config-t13-frequency-v2.json

Отредактировал названия согласно требованиям

* Update config-t13-frequency-v2.json

Подправил наименование шаблона

* Add T13-VFD support

Update TDeviceTemplatesTest.Validate.dat

---------

Co-authored-by: Nikolay Korotkiy <sikmir@disroot.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.142.0) stable; urgency=medium
+
+  * Add template for T13-VFD-v2
+
+ -- Mikhail Burchu <mikhail.burchu@wirenboard.com>  Thu, 12 Sep 2024 17:10:00 +0300
+
 wb-mqtt-serial (2.141.0) stable; urgency=medium
 
   * Add Modbus protocol support to port/Load RPC
