--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.143.1) stable; urgency=medium
+
+  * Set proper result code on port/Load RPC timeout
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Thu, 19 Sep 2024 16:22:26 +0500
+
 wb-mqtt-serial (2.143.0) stable; urgency=medium
 
   * Add the current transformers reverse setting to the MAP templates
