--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.143.2) stable; urgency=medium
+
+  * WB-MAO4-20 template: allow 20.48 mA max current
+
+ -- Pavel Gasheev <pavel.gasheev@wirenboard.ru>  Fri, 20 Sep 2024 10:01:07 +0300
+
 wb-mqtt-serial (2.143.1) stable; urgency=medium
 
   * JSON schema: allow floating-point numbers in "max" channel property
