--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wb-mqtt-serial (2.138.1-wb105) stable; urgency=medium
+
+  * JSON schema: allow floating-point numbers in "max" channel property
+  * WB-MAO4-20 template: allow 20.48 mA max current
+
+ -- Pavel Gasheev <pavel.gasheev@wirenboard.ru>  Wed, 25 Sep 2024 10:51:55 +0300
+
 wb-mqtt-serial (2.138.1-wb104) stable; urgency=medium
 
   * Add WB-MAO4-20mA support
