--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.143.4) stable; urgency=medium
+
+  * Add coverage report generation, no functional changes
+
+ -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Thu, 25 Sep 2024 13:10:00 +0400
+
 wb-mqtt-serial (2.143.3) stable; urgency=medium
 
   * WB-LED template: safety mode, switch mode, powerup actions support
