--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.144.1) stable; urgency=medium
+
+  * serial_device: add port name to logs
+
+ -- Vladimir Romanov <v.romanov@wirenboard.com>  Fri, 11 Oct 2024 14:15:16 +0300
+
 wb-mqtt-serial (2.144.0) stable; urgency=medium
 
   * Add template for Breezart-Lux(SB)
