--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.144.1) stable; urgency=medium
+
+  * Fix SOKOL-M template
+
+ -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Sun, 20 Oct 2024 19:10:00 +0400
+
 wb-mqtt-serial (2.144.0) stable; urgency=medium
 
   * Add template for Breezart-Lux(SB)
