--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wb-mqtt-serial (2.145.1) stable; urgency=medium
+
+  * Deprecate WB-MIR v.2 template
+  * Add new template WB-MIR_BUTTONS (for WB-MIR v.2 and v.3, with buttons support)
+
+ -- Radmir Khakimov <radmir.khakimov@wirenboard.com>  Tue, 24 Oct 2024 20:35:00 +0500
+
 wb-mqtt-serial (2.145.0) stable; urgency=medium
 
   * Add new template ONOKOM-AIR-TCL-1-MB-B
