--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.145.1) stable; urgency=medium
+
+  * Fix somfy transmitter template
+
+ -- Andrey Ksenofontov <andrey.ksenofontov@wirenboard.com>  Thu, 24 Oct 2024 15:52:00 +0300
+
 wb-mqtt-serial (2.145.0) stable; urgency=medium
 
   * Add new template ONOKOM-AIR-TCL-1-MB-B
