--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,8 @@
 wb-mqtt-serial (2.146.0) stable; urgency=medium
 
   * Deprecate WB-MIR v.2 template
-  * Add new template WB-MIR_BUTTONS (for WB-MIR v.2 and v.3, with buttons support)
+  * Add new template for WB-MIR v.2 with buttons support
+  * Add new template for WB-MIR v.3
 
  -- Radmir Khakimov <radmir.khakimov@wirenboard.com>  Tue, 24 Oct 2024 20:35:00 +0500
 
