--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,16 @@
+wb-mqtt-serial (2.147.0) stable; urgency=medium
+
+  * Store press_counter register values as soon as possible.
+    It eliminates publishing of outdated values after unexpected wb-mqtt-serial restart.
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Sat, 02 Nov 2024 10:39:26 +0500
+
 wb-mqtt-serial (2.146.0) stable; urgency=medium
 
   * Do not publish zero press counter value after device's reset. 
     These zeros cause false positives in whenChanged conditions in wb-rules
+  * Add press_counter reg_type in device templates.
+    It is the same as input, but wb-mqtt-serial will not publish the first zero register value after device reset.
 
  -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Thu, 31 Oct 2024 12:25:29 +0500
 
