--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.147.2) stable; urgency=medium
+
+  * Add min_request_interval=1000 to WBE2-I-EBUS template
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Thu, 21 Nov 2024 11:15:57 +0500
+
 wb-mqtt-serial (2.147.1) stable; urgency=medium
 
   * Reconfigure fast modbus events after device restart
