--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.148.1) stable; urgency=medium
+
+  * Fix condition evaluation in device template setup section
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Tue, 26 Nov 2024 13:45:24 +0500
+
 wb-mqtt-serial (2.148.0) stable; urgency=medium
 
   * Add condition to device template setup section
