--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.149.0) stable; urgency=medium
+
+  * Add template for WBE2-I-OPENTHERM-FW-1-7-3
+
+ -- Mikhail Burchu <mikhail.burchu@wirenboard.com>  Wed, 27 Nov 2024 08:00:00 +0300
+
 wb-mqtt-serial (2.148.1) stable; urgency=medium
 
   * Fix condition evaluation in device template setup section
