--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.146.0-wb101) stable; urgency=medium
+
+  * Add template for WBE2-I-OPENTHERM-FW-1-7-3
+
+ -- Ekaterina Volkova <ekaterina.volkova@wirenboard.com>  Fri, 29 Nov 2024 08:00:00 +0300
+
 wb-mqtt-serial (2.146.0-wb100) stable; urgency=medium
 
   * Add condition to device template setup section
