Move oni devices up (#838)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.153.3-wb102-cb8ea449) stable; urgency=medium
+
+  * Move vendor devices up in templates list
+
+ -- Ekaterina Volkova <ekaterina.volkova@wirenboard.com>  Tue, 22 Apr 2025 17:28:24 +0300
+
 wb-mqtt-serial (2.153.3-wb102) stable; urgency=medium
 
   * WB-MDM3, WB-MAO4 templates: fix swapped increase/decrease actions for all channels
