--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.149.1) stable; urgency=medium
+
+  * Add port name to logs
+
+ -- Vladimir Romanov <v.romanov@wirenboard.com>  Tue, 03 Dec 2024 11:30:19 +0500
+
 wb-mqtt-serial (2.149.0) stable; urgency=medium
 
   * Add template for WBE2-I-OPENTHERM-FW-1-7-3
