--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.149.1) stable; urgency=medium
+
+  * Add translate for template BHT-6000
+
+ -- Andrey Ksenofontov <andrey.ksenofontov@wirenboard.com>  Wed, 04 Dec 2024 13:00:00 +0300
+
 wb-mqtt-serial (2.149.0) stable; urgency=medium
 
   * Add template for WBE2-I-OPENTHERM-FW-1-7-3
