Add "protocol:" prefix to type in config/Load
config/Load RPC response contains a list of device templates. Each template item has type field with value from templates' s device_type. Protocols for custom devices are also in the list. Type field for them is populated with a protocol name. The type field must be unique across all items, but
some device types and protocol names are the same.
Add prefix to protocol types to make them unique

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wb-mqtt-serial (2.151.0) stable; urgency=medium
+
+  * Add "protocol:" prefix to type field in config/Load RPC response for schemas of custom devices.
+    This fixes displaying on Mercury 230 configs in wb-mqtt-homeui.
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Wed, 11 Dec 2024 11:47:56 +0500
+
 wb-mqtt-serial (2.150.0) stable; urgency=medium
 
   * Add template for BHT-006
