--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 wb-mqtt-serial (2.147.3) stable; urgency=medium
 
-  * WB-MAI6: add Supply voltage
+  * WB-MAI6: add supply voltage channel
 
  -- Ilia Skochilov <ilia.skochilov@wirenboard.com>  Thu, 19 Dec 2024 17:13:00 +0300
 
