--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
 wb-mqtt-serial (2.152.1) stable; urgency=medium
 
-  * WB-MAI6: add supply voltage channel
+  * WB-MAI6: add Internal 5V Bus Voltage channel
 
- -- Ilia Skochilov <ilia.skochilov@wirenboard.com>  Thu, 19 Dec 2024 17:13:00 +0300
+ -- Ilia Skochilov <ilia.skochilov@wirenboard.com>  Thu, 20 Dec 2024 17:13:00 +0300
 
 wb-mqtt-serial (2.152.0) stable; urgency=medium
 
