--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.152.1) stable; urgency=medium
+
+  * WB-MAI6: add Internal 5V Bus Voltage channel
+
+ -- Ilia Skochilov <ilia.skochilov@wirenboard.com>  Fri, 20 Dec 2024 17:13:00 +0300
+
 wb-mqtt-serial (2.152.0) stable; urgency=medium
 
   * Add "protocol:" prefix to type field in config/Load RPC response for schemas of custom devices.
