--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.152.4) stable; urgency=medium
+
+  * Validate conditions syntax in device templates
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Thu, 09 Jan 2025 12:51:23 +0500
+
 wb-mqtt-serial (2.152.3) stable; urgency=medium
 
   * Fix max_unchanged_interval description
