--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.146.0-wb103) stable; urgency=medium
+
+  * Disable events for `RGB Strip Hue` for WB-LED and WB-MRGBW-D
+
+ -- Pavel Gasheev <pavel.gasheev@wirenboard.com>  Mon, 13 Jan 2025 10:31:11 +0300
+
 wb-mqtt-serial (2.146.0-wb102) stable; urgency=medium
 
   * Add default config with ttyMOD4 for Wiren Board 8.5
