--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+wb-mqtt-serial (2.146.0-wb104) stable; urgency=medium
+
+  * Deprecate WB-MIR v.2 template
+  * Add new template for WB-MIR v.2 with buttons support
+  * Add new template for WB-MIR v.3
+
+ -- Radmir Khakimov <radmir.khakimov@wirenboard.com>  Wed, 15 Jan 2025 10:31:11 +0500
+
 wb-mqtt-serial (2.146.0-wb103) stable; urgency=medium
 
   * Disable events for `RGB Strip Hue` for WB-LED and WB-MRGBW-D
