--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.153.2) stable; urgency=medium
+
+  * WB-MAI6 template: add scale for physical value
+
+ -- Pavel Gasheev <pavel.gasheev@wirenboard.com>  Wed, 22 Jan 2025 10:27:28 +0300
+
 wb-mqtt-serial (2.153.1) stable; urgency=medium
 
   * WB-MCM8 template: set maximum debounce time to 2000 ms
