--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.154.0) stable; urgency=medium
+
+  * Add template for MEANWELL-DRS-Series
+
+ -- Mikhail Burchu <mikhail.burchu@wirenboard.com>  Tue, 28 Jan 2025 09:00:00 +0300
+
 wb-mqtt-serial (2.153.2) stable; urgency=medium
 
   * WB-MAI6 template: add scale for physical value
