--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.153.3) stable; urgency=medium
+
+  * Fix changelog, up version for CI. No functional changes
+
+ -- Ekaterina Volkova <ekaterina.volkova@wirenboard.com>  Tue, 28 Jan 2025 13:15:33 +0300
+
 wb-mqtt-serial (2.153.2) stable; urgency=medium
 
   * WB-MAI6 template: add scale for physical value
