--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wb-mqtt-serial (2.153.3) stable; urgency=medium
+
+  * WB-LED template: fix default value for switch mode actions ('off' for switch off; 'on' for switch on)
+  * WB-LED template: fix missed W4 channel in switch mode actions for RGB+W mode 
+
+ -- Pavel Gasheev <pavel.gasheev@wirenboard.com>  Tue, 28 Jan 2025 17:22:58 +0300
+
 wb-mqtt-serial (2.153.2) stable; urgency=medium
 
   * WB-MAI6 template: add scale for physical value
