--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.154.0) stable; urgency=medium
+
+  * Add new template for meanwell-drs-series 
+
+ -- Mikhail Burchu <mikhail.burchu@wirenboard.com>  Wed, 29 Jan 2025 09:45:00 +0300
+
 wb-mqtt-serial (2.153.3) stable; urgency=medium
 
   * Fix changelog, up version for CI. No functional changes
