--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wb-mqtt-serial (2.154.2) stable; urgency=medium
+
+  * WB-LED template: fix default value for switch mode actions ('off' for switch off; 'on' for switch on)
+  * WB-LED template: fix missed W4 channel in switch mode actions for RGB+W mode 
+
+ -- Pavel Gasheev <pavel.gasheev@wirenboard.com>  Thu, 30 Jan 2025 09:46:39 +0300
+
 wb-mqtt-serial (2.154.1) stable; urgency=medium
 
   * WB-MAP6S fw2: add peaks registers
