--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.156.0) stable; urgency=medium
+
+  * Add port/Scan RPC for searching for devices using Fast Modbus
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Thu, 06 Feb 2025 11:21:27 +0500
+
 wb-mqtt-serial (2.155.0) stable; urgency=medium
 
   * WB-MWAC template: add buttons support
