--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 wb-mqtt-serial (2.146.0-wb101-cb8ea449-2) stable; urgency=medium
 
   * Add more vendor's templates namings
+  * Fix changelog due to lintian errors
 
  -- Ekaterina Volkova <ekaterina.volkova@wirenboard.com>  Thu, 06 Feb 2025 21:32:11 +0300
 
@@ -173,7 +174,7 @@ wb-mqtt-serial (2.135.0) stable; urgency=medium
 
  -- Ilia Skochilov <ilia.skochilov@wirenboard.com>  Tue, 30 Jul 2024 10:15:00 +0300
 
- wb-mqtt-serial (2.134.0) stable; urgency=medium
+wb-mqtt-serial (2.134.0) stable; urgency=medium
 
   * Add template for kaplestop
 
@@ -243,8 +244,8 @@ wb-mqtt-serial (2.130.2) stable; urgency=medium
   * Add indirect control channels for WB-MSW-v3/v4/v4-lora and WB-MIR-v2
 
  -- Andrey Ksenofontov <andrey.ksenofontov@wirenboard.com>  Thu, 10 Jul 2024 16:52:00 +0300
- 
- wb-mqtt-serial (2.130.1) stable; urgency=medium
+
+wb-mqtt-serial (2.130.1) stable; urgency=medium
 
   * Fix a type in WB-Domofon template
 
@@ -261,7 +262,7 @@ wb-mqtt-serial (2.129.1) stable; urgency=medium
   * Add channels "tariffs" to templates/config-mercury230.json
 
  -- Elena Savchenko <elena.savchenko@wirenboard.com>  Thu, 27 Jun 2024 11:55:30 +0500
- 
+
 wb-mqtt-serial (2.129.0) stable; urgency=medium
 
   * WB-MAI6 template: add WB-VDIV and custom voltage divider support
