--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.155.2) stable; urgency=medium
+
+  * Fix translate for meanwell-drs-series
+
+ -- Mikhail Burchu <mikhail.burchu@wirenboard.com>  Tue, 18 Feb 2025 08:30:00 +0300
+
 wb-mqtt-serial (2.155.1) stable; urgency=medium
 
   * Check motor id in A-OK protocol to filter the responses that match the request
