--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-wb-mqtt-serial (2.154.2) stable; urgency=medium
+wb-mqtt-serial (2.153.3-wb100) stable; urgency=medium
 
   * WB-LED template: fix default value for switch mode actions ('off' for switch off; 'on' for switch on)
-  * WB-LED template: fix missed W4 channel in switch mode actions for RGB+W mode 
+  * WB-LED template: fix missed W4 channel in switch mode actions for RGB+W mode
 
- -- Pavel Gasheev <pavel.gasheev@wirenboard.com>  Thu, 30 Jan 2025 09:46:39 +0300
+ -- Pavel Gasheev <pavel.gasheev@wirenboard.com>  Tue, 25 Feb 2025 10:41:36 +0300
 
 wb-mqtt-serial (2.153.3) stable; urgency=medium
 
