--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.157.0) stable; urgency=medium
+
+  * Add WB-MAI2-mini/CC v.3 support
+
+ -- Pavel Gasheev <pavel.gasheev@wirenboard.com>  Tue, 25 Feb 2025 19:06:56 +0300
+
 wb-mqtt-serial (2.156.0) stable; urgency=medium
 
   * Add port/Scan RPC for searching for devices using Fast Modbus
