--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.153.3-wb102) stable; urgency=medium
+
+  * WB-MDM3, WB-MAO4 templates: fix swapped increase/decrease actions for all channels
+
+ -- Pavel Gasheev <pavel.gasheev@wirenboard.com>  Wed, 12 Mar 2025 15:43:34 +0300
+
 wb-mqtt-serial (2.153.3-wb101) stable; urgency=medium
 
   * Add WB-MAI2-mini/CC v.3 support
