--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.157.5) stable; urgency=medium
+
+  * Fix reading strings from Modbus registers
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Tue, 25 Mar 2025 16:46:52 +0500
+
 wb-mqtt-serial (2.157.4) stable; urgency=medium
 
   * Use 0x00 or 0xFF as end marker when reading strings from Modbus registers
