--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.157.6) stable; urgency=medium
+
+  * Fix build with gcc14
+
+ -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com> Thu, 27 Mar 2025 16:30:00 +0400
+
 wb-mqtt-serial (2.157.5) stable; urgency=medium
 
   * Fix reading strings from Modbus registers
