--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.157.6) stable; urgency=medium
+
+  * Add color temperature channels for arlight-dali-logic-lite-ps-x1
+
+ -- Mikhail Burchu <mikhail.burchu@wirenboard.com>  Mon, 31 Mar 2025 09:00:00 +0300
+
 wb-mqtt-serial (2.157.5) stable; urgency=medium
 
   * Fix reading strings from Modbus registers
