--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.157.7) stable; urgency=medium
+
+  * Fix build with gcc14
+
+ -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Mon, 31 Mar 2025 16:30:00 +0400
+
 wb-mqtt-serial (2.157.6) stable; urgency=medium
 
   * Add color temperature channels for arlight-dali-logic-lite-ps-x1
