--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.157.8) stable; urgency=medium
+
+  * Fix channels format for xy-md0x
+
+ -- Mikhail Burchu <mikhail.burchu@wirenboard.com>  Thu, 3 Apr 2025 12:00:00 +0300
+
 wb-mqtt-serial (2.157.7) stable; urgency=medium
 
   * Fix build with gcc14
