--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.158.0) stable; urgency=medium
+
+  * Add WB-UPS v.3 template
+
+ -- Pavel Gasheev <pavel.gasheev@wirenboard.com>  Thu, 03 Apr 2025 13:25:08 +0300
+
 wb-mqtt-serial (2.157.7) stable; urgency=medium
 
   * Fix build with gcc14
