--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.158.3) stable; urgency=medium
+
+  * Fix serial client event logs
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Fri, 04 Apr 2025 13:58:23 +0300
+
 wb-mqtt-serial (2.158.2) stable; urgency=medium
 
   * Fix Modbus register value debug logs
