--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.158.4) stable; urgency=medium
+
+  * Fix register exclusion log
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Tue, 08 Apr 2025 14:50:06 +0300
+
 wb-mqtt-serial (2.158.3) stable; urgency=medium
 
   * Fix serial client event logs
