--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.158.4) stable; urgency=medium
+
+  * Update Gurux.DLMS.cpp to 20250303.1
+
+ -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Tue, 08 Apr 2025 16:00:00 +0400
+
 wb-mqtt-serial (2.158.3) stable; urgency=medium
 
   * Fix serial client event logs
