--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.158.5) stable; urgency=medium
+
+  * Fix register exclusion log
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Tue, 08 Apr 2025 16:51:02 +0300
+
 wb-mqtt-serial (2.158.4) stable; urgency=medium
 
   * Fix port scan WB-MAP signature check
