--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.158.6) stable; urgency=medium
+
+  * Fix conditional jump depending on uninitialised value
+
+ -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Wed, 09 Apr 2025 13:00:00 +0400
+
 wb-mqtt-serial (2.158.5) stable; urgency=medium
 
   * Fix register exclusion log
