--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.158.7) stable; urgency=medium
+
+  * Fix tempates for WB-MAP with firmware 2.0.0 and later
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Wed, 09 Apr 2025 15:37:10 +0300
+
 wb-mqtt-serial (2.158.6) stable; urgency=medium
 
   * Fix conditional jump depending on uninitialised value
