--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.158.8) stable; urgency=medium
+
+  * Refactror TRPCPortHandler class, no functional changes
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Fri, 11 Apr 2025 10:34:19 +0300
+
 wb-mqtt-serial (2.158.7) stable; urgency=medium
 
   * Fix tempates for WB-MAP with firmware 2.0.0 and later
