fix 2.158.8 changelog note

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,7 +6,7 @@ wb-mqtt-serial (2.158.9) stable; urgency=medium
 
 wb-mqtt-serial (2.158.8) stable; urgency=medium
 
-  * Refactror TRPCPortHandler class, no functional changes
+  * Refactor TRPCPortHandler class, no functional changes
 
  -- Ilya Titov <ilya.titov@wirenboard.com>  Fri, 11 Apr 2025 10:34:19 +0300
 
