--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.158.10) stable; urgency=medium
+
+  * Refactor LoadRegisterConfig method, no functional changes
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Tue, 15 Apr 2025 12:47:21 +0300
+
 wb-mqtt-serial (2.158.9) stable; urgency=medium
 
   * Refactor TSerialDeviceFactory class, no functional changes
