--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.159.0) stable; urgency=medium
+
+  * Add device/LoadConfig RPC for modbus device configuration reading
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Wed, 16 Apr 2025 12:41:36 +0300
+
 wb-mqtt-serial (2.158.10) stable; urgency=medium
 
   * Refactor LoadRegisterConfig method, no functional changes
