Feature/backport cb8ea449 (#895)
* Move oni devices up (#838)

* Make vendor templates searchable from wb-device-manager (#840)

* Add more vendor's templates namings (#863)

---------

Co-authored-by: Ekaterina Volkova <97599621+ekateluv@users.noreply.github.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.180.2-wb101-cb8ea449b) stable; urgency=medium
+
+  * Vendor (cb8ea449): port custom template ordering/names to 2.180.2-wb101
+
+ -- Ekaterina Volkova <ekaterina.volkova@wirenboard.com>  Mon, 03 Feb 2025 12:00:00 +0300
+
 wb-mqtt-serial (2.180.2-wb101) stable; urgency=medium
 
   * fix WB-LED fade dec RGB regs
