MAP12H: Fix formats in nonactive energy registers

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 wb-mqtt-serial (2.159.2) stable; urgency=medium
 
   * config-map12e-fw2.json.jinja: Add nonactive power and energy registers, translates
-  * config-map12h-fw2.json: Fix addresses and scales of nonactive energy registers
+  * config-map12h-fw2.json: Fix addresses, scales and format of nonactive energy registers
 
  -- Ilia Skochilov <ilia.skochilov@wirenboard.com>  Thu, 13 Mar 2025 11:12:00 +0300
 
