--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.160.0) stable; urgency=medium
+
+  * Add device/LoadConfig RPC for modbus device configuration reading
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Wed, 16 Apr 2025 12:41:36 +0300
+
 wb-mqtt-serial (2.159.1) stable; urgency=medium
 
   * Refactor Modbus::WriteRegister method, no functional changes
