--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
 wb-mqtt-serial (2.162.0) stable; urgency=medium
 
   * Add firmware version checks to device/LoadConfig RPC
-  * Add device config parameters sync to device/LoadConfig RPC
   * Add continuous read feature to device/LoadConfig RPC
+  * Add device config usage to device/LoadConfig RPC
 
  -- Ilya Titov <ilya.titov@wirenboard.com>  Wed, 07 May 2025 09:41:28 +0300
 
