--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.161.2) stable; urgency=medium
+
+  * Add template for Oven MST-24 stepper motor driver
+
+ -- Alexander Getman <alexander.getman@wirenboard.com>  Tue, 13 May 2025 12:35:10 +0300
+
 wb-mqtt-serial (2.161.1) stable; urgency=medium
 
   * Source code refactoring. No functional changes
