--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.161.2) stable; urgency=medium
+
+  * Source code refactoring. No functional changes
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Tue, 13 May 2025 12:59:11 +0500
+
 wb-mqtt-serial (2.161.1) stable; urgency=medium
 
   * Source code refactoring. No functional changes
