--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.162.1) stable; urgency=medium
+
+  * Source code refactoring. No functional changes
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Wed, 14 May 2025 16:52:30 +0500
+
 wb-mqtt-serial (2.162.0) stable; urgency=medium
 
   * Add firmware version checks to device/LoadConfig RPC
