Add read parameters cache to Device/LoadConfig RPC

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.163.1) stable; urgency=medium
+
+  * Add read parameters cache to Device/LoadConfig RPC
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Wed, 14 May 2025 17:32:31 +0300
+
 wb-mqtt-serial (2.163.0) stable; urgency=medium
 
   * Add template for Oven MST-24 stepper motor driver
