--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
+wb-mqtt-serial (2.164.1) stable; urgency=medium
+
+  * Fix changelog, no functional changes
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Fri, 16 May 2025 11:55:36 +0000
+
 wb-mqtt-serial (2.164.0) stable; urgency=medium
 
   * Add address value validation for template parameters array
 
- -- root <ilya.titov@wirenboard.com>  Fri, 16 May 2025 07:45:08 +0000
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Fri, 16 May 2025 07:45:08 +0000
 
 wb-mqtt-serial (2.163.1) stable; urgency=medium
 
