--- a/debian/changelog
+++ b/debian/changelog
@@ -1,14 +1,20 @@
+wb-mqtt-serial (2.164.2) stable; urgency=medium
+
+  * Refactor test templates features, no functional changes
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Sun, 18 May 2025 11:15:01 +0300
+
 wb-mqtt-serial (2.164.1) stable; urgency=medium
 
   * Fix changelog, no functional changes
 
- -- Ilya Titov <ilya.titov@wirenboard.com>  Fri, 16 May 2025 11:55:36 +0000
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Fri, 16 May 2025 14:55:36 +0300
 
 wb-mqtt-serial (2.164.0) stable; urgency=medium
 
   * Add address value validation for template parameters array
 
- -- Ilya Titov <ilya.titov@wirenboard.com>  Fri, 16 May 2025 07:45:08 +0000
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Fri, 16 May 2025 10:45:08 +0300
 
 wb-mqtt-serial (2.163.1) stable; urgency=medium
 
