--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.164.2) stable; urgency=medium
+
+  * Somfy SDN: add application mode property (roller/venetian) for Sonesse 40 AC
+
+ -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Fri, 16 May 2025 19:10:00 +0400
+
 wb-mqtt-serial (2.164.1) stable; urgency=medium
 
   * Fix changelog, no functional changes
